--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.0.0",
+    "framer-motion": "^7.5.3",
     "hamburger-react": "^2.5.0",
     "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
