--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.6",
+    "react-toastify": "^9.0.8",
     "react-ts-tradingview-widgets": "^1.0.11",
     "redux": "^4.2.0",
     "styled-components": "^5.3.6",
