--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.0.0",
+    "emailjs": "^4.0.1",
     "firebase": "^9.12.1",
     "framer-motion": "^7.5.3",
     "hamburger-react": "^2.5.0",
