--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "traderepublic",
+  "name": "traderepublican",
+  "homepage": "https://traderepublican.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
